slickerius-archive/deployment-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slickerius-archive-fe
  namespace: slickerius-archive
spec:
  replicas: 2
  selector:
    matchLabels:
      app: slickerius-archive-fe
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: slickerius-archive-fe
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - node-fhz.us-central1-b.c.main-proj-454016.internal
                - node-fhztc
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: slickerius-archive-fe
            topologyKey: kubernetes.io/hostname
      containers:
      - name: frontend
        image: ghcr.io/slickerius/slickerius-archive-fe:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 512Mi
      imagePullSecrets:
      - name: ghcr-secret
