slickerius-archive/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slickerius-archive
  namespace: slickerius-archive
spec:
  selector:
    app: slickerius-archive
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 443
