slickerius-archive/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slickerius-archive-fe
  namespace: slickerius-archive
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - archive.slickeri.us
        - archive.slickerius.net
      secretName: slickerius-archive-fe-tls
  rules:
    - host: archive.slickeri.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slickerius-archive-fe
                port:
                  number: 80
    - host: archive.slickerius.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slickerius-archive-fe
                port:
                  number: 80
